--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "google-sheets-i18n",
+	"name": "google-sheets-i18n-generator",
 	"version": "1.0.0-beta.1",
 	"description": "Generate i18n JSON/JS files from a Google Sheets spreadsheet",
 	"main": "index.js",
@@ -11,7 +11,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/VictorCazanave/google-sheets-i18n.git"
+		"url": "git+https://github.com/VictorCazanave/google-sheets-i18n-generator.git"
 	},
 	"keywords": [
 		"google",
@@ -24,9 +24,9 @@
 	"author": "Victor Cazanave <victor.cazanave@gmail.com>",
 	"license": "MIT",
 	"bugs": {
-		"url": "https://github.com/VictorCazanave/google-sheets-i18n/issues"
+		"url": "https://github.com/VictorCazanave/google-sheets-i18n-generator/issues"
 	},
-	"homepage": "https://github.com/VictorCazanave/google-sheets-i18n#readme",
+	"homepage": "https://github.com/VictorCazanave/google-sheets-i18n-generator#readme",
 	"dependencies": {
 		"commander": "^4.1.0",
 		"dot-object": "^2.1.2",
