--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"gs-i18n": "./index.js"
 	},
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "ava"
 	},
 	"repository": {
 		"type": "git",
@@ -34,6 +34,7 @@
 		"pkginfo": "^0.4.1"
 	},
 	"devDependencies": {
+		"ava": "^3.0.0",
 		"eslint": "^6.8.0"
 	}
 }
