--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 	},
 	"devDependencies": {
 		"ava": "^3.0.0",
-		"eslint": "^6.8.0"
+		"eslint": "^6.8.0",
+		"mock-fs": "^4.10.4",
+		"sinon": "^8.1.1"
 	}
 }
