--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"gs-i18n": "./index.js"
 	},
 	"scripts": {
-		"test": "ava"
+		"test": "nyc --reporter=lcov ava",
+		"coverage": "codecov"
 	},
 	"repository": {
 		"type": "git",
@@ -35,8 +36,10 @@
 	},
 	"devDependencies": {
 		"ava": "^3.0.0",
+		"codecov": "^3.6.4",
 		"eslint": "^6.8.0",
 		"mock-fs": "^4.10.4",
+		"nyc": "^15.0.0",
 		"sinon": "^8.1.1"
 	}
 }
