--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
 	"description": "Generate i18n JSON/JS files from a Google Sheets spreadsheet",
 	"main": "index.js",
 	"bin": {
-		"gs-i18n": "./index.js"
+		"gs-i18n": "index.js"
 	},
+	"files": [
+		"lib/",
+		"index.js"
+	],
 	"scripts": {
 		"test": "nyc --reporter=lcov ava",
 		"coverage": "codecov"
